kube/ingresses/echo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - lozuk.dev
    - echo1.lozuk.dev
    # - echo2.lozuk.dev
    secretName: letsencrypt-production
  rules:
  - host: echo1.lozuk.dev
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 3000
  # - host: echo2.lozuk.dev
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: echo2
  #         servicePort: 80
